# ic-websocket-poc

./: CODEOWNERS  LICENSE  README.md
ic_websocket_canisters/: Cargo.toml  dfx.json  package.json  webpack.config.js
ic_websocket_canisters/src/ic_websocket_backend/: Cargo.toml  ic_websocket_backend.did
ic_websocket_canisters/src/ic_websocket_backend/src/: canister.rs  lib.rs  sock.rs
ic_websocket_canisters/src/ic_websocket_frontend/assets/: main.css
ic_websocket_canisters/src/ic_websocket_frontend/src/: index.html  index.js  websocketConnection.js
ic_websocket_canisters/src/ic_websocket_frontend/src/utils/: addNotification.js  parseHTMLString.js  validateBody.js
ic_websocket_gateway/: Cargo.toml
ic_websocket_gateway/src/: canister_methods.rs  main.rs
