[package]
name = "ic_websocket_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
ezsockets = { version = "0.4", features = ["tungstenite"] }
async-trait = "0.1.52"
candid = "0.8.3"
ic-agent = "0.23.2"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
serde = "1.0.147"
serde_cbor = "0.11.2"
tokio = { version = "1.21.2", features = ["full"] }
ring = "0.16"
serde_bytes = "0.11"
tungstenite = "0.16.0"
ed25519-compact = "2"