[package]
name = "ic_websocket_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.6.6"
ic-cdk-macros = "0.6.6"
flate2 = "1.0"
ic-certified-map = "0.3"
base64 = "0.13.1"
serde = "1.0.147"
sha2 = "0.10.6"
serde_cbor = "0.11.2"
serde_bytes = "0.11"
ed25519-compact = { version = "2", default-features = false }